--- a/client/templates/vehicle.html
+++ b/client/templates/vehicle.html
@@ -28,9 +28,12 @@
                             edit
                         </button>
                     </a>
-                    <button class="px-6 py-2 bg-red-400 hover:bg-red-500 text-white rounded-lg font-medium transition-colors">
-                        delete
-                    </button>
+                    <form method="POST" action="{% url 'delete_vehicle' vehicle.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="px-6 py-2 bg-red-400 hover:bg-red-500 text-white rounded-lg font-medium transition-colors">
+                            delete
+                        </button>
+                    </form>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-8">
@@ -45,4 +48,5 @@
             </div>
         </div>
     {% endfor %}
+</div>
 {% endblock %}
