--- a/client/templates/vehicle.html
+++ b/client/templates/vehicle.html
@@ -4,7 +4,7 @@
 <!-- Page Title -->
 <div class="text-center mb-12 mt-12 relative">
     <h1 class="text-4xl font-bold mb-3">Vehicles</h1>
-    <p class="text-slate-400">All your EV cars available</p>
+    <p class="text-slate-400">All your EV vehicles available</p>
     <!-- Page Header -->
     <div class="flex justify-end items-end absolute top-7 right-0">
         <a href="{% url 'add_vehicle' %}">
