--- a/client/templates/add_vehicle.html
+++ b/client/templates/add_vehicle.html
@@ -4,7 +4,7 @@
 <!-- Page Title -->
 <div class="text-center mb-12 mt-12">
     <h1 class="text-4xl font-bold mb-3">Add Vehicle</h1>
-    <p class="text-slate-400">Add your new EV car</p>
+    <p class="text-slate-400">Add your new EV vehicle</p>
 </div>
 
 <!-- Add vehicle form -->
