--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -31,7 +31,15 @@
             </div>
             <!-- login button -->
             <div>
-                <a href="{% url 'profile' %}" class="{% if request.path == '/client/profile/' %}active{% endif %} px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-xl text-xl transition-colors ">66070065</a>
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'profile' %}" class="{% if request.path == '/client/profile/' %}active{% endif %} px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-xl text-xl transition-colors ">
+                        {{ request.user.username|default:"Profile" }}
+                    </a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-xl text-xl transition-colors ">
+                        Login
+                    </a>
+                {% endif %}
             </div>
         </nav>
     </header>
