--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -2,40 +2,30 @@
 
 {% block content %}
 <!-- Page Title -->
-<div class="text-center mb-12 mt-12 relative">
+<div class="text-center mb-10 mt-12 relative">
     <h1 class="text-4xl font-bold mb-3">Profile</h1>
     <p class="text-slate-400">View profile information</p>
     <!-- Page Header -->
-    <div class="flex justify-end items-end absolute top-7 right-0">
-        <a href="{% url 'edit_profile' user_id=1 %}">
-            <button class="px-6 py-3 bg-cyan-400 hover:bg-cyan-500 text-slate-900 rounded-lg font-medium transition-colors">
-                edit
-            </button>
-        </a>
-    </div>
+    {% if user.is_authenticated %}
+        <div class="flex justify-end items-end absolute top-7 right-57">
+            <a href="{% url 'edit_profile' %}">
+                <button class="px-6 py-3 bg-cyan-400 hover:bg-cyan-500 text-slate-900 rounded-lg font-medium transition-colors cursor-pointer">
+                    edit
+                </button>
+            </a>
+        </div>
+    {% endif %}
 </div>
 
-<form>
-    <div class="bg-slate-800 rounded-3xl p-12">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
-
-            <div>
-                <label class="block text-white text-lg mb-3">Username</label>
-                <input 
-                    type="text" 
-                    value="nuttawit_xxx" 
-                    readonly
-                    class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
-            </div>
-
-            <div>
-                <label class="block text-white text-lg mb-3">Password</label>
-                <input 
-                    type="password" 
-                    value="password123" 
-                    readonly
-                    class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
-            </div>
+<section>
+    <div class="bg-slate-800 rounded-3xl px-12 py-8 max-w-3xl mx-auto">
+        <div class='mb-8'>
+            <label class="block text-white text-lg mb-3">Username</label>
+            <input 
+                type="text" 
+                value="{{ user.username|default_if_none:'-' }}" 
+                readonly
+                class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
@@ -43,7 +33,7 @@
                 <label class="block text-white text-lg mb-3">Firstname</label>
                 <input 
                     type="text" 
-                    value="nuttawit" 
+                    value="{{ user.first_name|default:'-' }}" 
                     readonly
                     class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
             </div>
@@ -52,18 +42,18 @@
                 <label class="block text-white text-lg mb-3">Lastname</label>
                 <input 
                     type="text" 
-                    value="phiphatchirakul" 
+                    value="{{ user.last_name|default:'-' }}" 
                     readonly
                     class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
             </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 ">
             <div>
                 <label class="block text-white text-lg mb-3">Email</label>
                 <input 
                     type="email" 
-                    value="66070065@kmitl.ac.th" 
+                    value="{{ user.email|default:'-' }}" 
                     readonly
                     class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
             </div>
@@ -72,19 +62,24 @@
                 <label class="block text-white text-lg mb-3">Phone number</label>
                 <input 
                     type="tel" 
-                    value="09x-xxx-xxxx" 
+                    value="{{ phone_number_display }}" 
                     readonly
                     class="w-full px-6 py-4 bg-slate-700 text-slate-400 rounded-xl focus:outline-none cursor-not-allowed">
             </div>
         </div>
+
+        <div class="flex justify-end mb-6">
+            <p class="text-slate-400 text-center mt-6">
+                <a href="{% url 'change_password' %}" class="text-yellow-400 underline hover:text-yellow-300 transition-colors">Change Password</a>
+            </p>
+        </div>
         <a href="{% url 'logout' %}">
             <button 
                 type="button"
-                onclick="handleLogout()"
-                class="w-full py-4 bg-red-400 hover:bg-red-500 text-white font-medium rounded-xl transition-colors">
+                class="w-full py-4 bg-red-400 hover:bg-red-500 text-white font-medium rounded-xl transition-colors cursor-pointer">
                 logout
             </button>
         </a>
     </div>
-</form>
+</section>
 {% endblock %}
